<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.main.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:elevation="4dp"
        android:paddingVertical="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/headers_home"
            android:src="@mipmap/ic_launcher" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_home">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp">

            <ImageView
                android:id="@+id/img_movies"
                android:layout_width="match_parent"
                android:layout_height="560dp"
                android:contentDescription="@string/headers_movies"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_name_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/usual_regular"
                android:text="Name Movie"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="32sp"
                app:layout_constraintBottom_toTopOf="@+id/tv_information"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="64dp"
                android:ellipsize="end"
                android:fontFamily="@font/usual_regular"
                android:maxLines="3"
                android:text="Information"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/img_movies"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_movies" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:fontFamily="@font/usual_regular"
                android:text="@string/trending"
                android:textSize="18sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_movies"
                tools:viewBindingIgnore="true" />

            <TextView
                android:id="@+id/tv_trending_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:text="@string/see_more"
                android:fontFamily="@font/usual_regular"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_trending"
                android:layout_width="0dp"
                android:layout_height="240dp"
                android:layout_marginTop="8dp"
                android:scrollbarSize="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:itemCount="1"
                tools:listitem="@layout/item_home_movies" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/usual_regular"
                android:textColor="@color/black"
                android:text="Upcoming"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_trending"
                tools:viewBindingIgnore="true" />

            <TextView
                android:id="@+id/tv_upcoming_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:text="@string/see_more"
                android:fontFamily="@font/usual_regular"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView2" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_upcoming"
                android:layout_width="0dp"
                android:layout_height="240dp"
                android:layout_marginTop="8dp"
                android:scrollbarSize="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:itemCount="1"
                tools:listitem="@layout/item_home_movies" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/usual_regular"
                android:textColor="@color/black"
                android:text="@string/popular"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_upcoming"
                tools:viewBindingIgnore="true" />

            <TextView
                android:id="@+id/tv_popular_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:text="@string/see_more"
                android:fontFamily="@font/usual_regular"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView3" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_popular"
                android:layout_width="0dp"
                android:layout_height="240dp"
                android:layout_marginTop="8dp"
                android:scrollbarSize="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                tools:itemCount="1"
                tools:listitem="@layout/item_home_movies" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:id="@+id/rl_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_main_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/movie_not_found"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_loading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0"
        android:background="@color/light_iron"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tb_home"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>