<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.detail.DetailMoviesActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:elevation="4dp"
        android:paddingVertical="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/toggle_favorite"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_un_favorite"
            android:textOff=""
            android:textOn=""
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tb_details"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:scrollbarSize="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="16dp">

            <ImageView
                android:id="@+id/img_movie"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:contentDescription="@string/headers_movies"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_name_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/usual_regular"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_movie" />

            <TextView
                android:id="@+id/tv_overview_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:fontFamily="@font/usual_regular"
                android:text="@string/overview"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_name_movie" />

            <TextView
                android:id="@+id/tv_movie_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:fontFamily="@font/usual_bold"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_overview_title" />

            <TextView
                android:id="@+id/tv_actor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:alpha="0"
                android:fontFamily="@font/usual_regular"
                android:text="@string/actor"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_overview" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_detail_cast"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="8dp"
                android:alpha="0"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_actor"
                tools:itemCount="5"
                tools:listitem="@layout/item_movies_actrees" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>